--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ storage: ./storage
 # a list of users
 users:
   admin:
-    # crypto.createHash('sha1').update(password).digest('hex')
+    # crypto.createHash('sha1').update('password').digest('hex')
     password: 5baa61e4c9b93f3f0682250b6cf8331b7ee68fd8
 
 # a list of other known repositories we can talk to
