--- a/config.yaml
+++ b/config.yaml
@@ -14,18 +14,18 @@ uplinks:
 
     # amount of time to wait for repository to respond
     # before giving up and use the local cached copy
-    #timeout: 30s
+    timeout: 30s
 
     # maximum time in which data is considered up to date
     #
     # default is 2 minutes, so server won't request the same data from
     # uplink if a similar request was made less than 2 minutes ago
-    #maxage: 2m
+    maxage: 2m
 
     # if two subsequent requests fail, no further requests will be sent to
     # this uplink for five minutes
-    #max_fails: 2
-    #fail_timeout: 5m
+    max_fails: 2
+    fail_timeout: 5m
 
     # timeouts are defined in the same way as nginx, see:
     # http://wiki.nginx.org/ConfigNotation
@@ -33,9 +33,9 @@ uplinks:
 packages:
   # uncomment this for packages with "local-" prefix to be available
   # for admin only, it's a recommended way of handling private packages
-  #'local-*':
-  #  allow_access: admin
-  #  allow_publish: admin
+  'reflen-*':
+    allow_access: admin
+    allow_publish: admin
   #  # you can override storage directory for a group of packages this way:
   #  storage: 'local_storage'
 
